--- a/views/partials/nav.html
+++ b/views/partials/nav.html
@@ -22,6 +22,7 @@
       </li>
       <li><a href="#" id="lockBoardButton" class="disabled">Lock Board</a></li>
       <li><a href="#" id="drawNumbersButton" class="disabled">Draw Numbers</a></li>
+      <li><a href="#" id="deleteGameButton" class="disabled">Delete Game</a></li>
       {{/admin}}
       <li><a href="https://github.com/RyanDantzler/superbowl-pool">About</a></li>
       {{#authenticated}}<li><a href="/logout">Logout</a></li>{{/authenticated}}
